--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
+@font-face {
+  font-family: 'Hangyaku';
+  src: url('./fonts/Hangyaku-x390R.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
 :root {
-  --purple: #3a356d;
+  /* --purple: #80cbc4; */
+  --purple: #f48fb1;
+  --purple-dark: #283593;
 }
 body {
   margin: 0;
@@ -14,10 +22,19 @@ body {
 }
 main {
   flex: 1 0 auto;
+  width: 100%;
+  /* background: url(./img/main_header.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed; */
+  background-color: #f8bbd0;
+  padding: 2rem 0;
 }
-
 .dokiColor {
   background: var(--purple);
+}
+.dokiFont {
+  font-family: 'Hangyaku';
 }
 .headerMain {
   width: 100%;
@@ -31,8 +48,18 @@ main {
   align-items: center;
   color: #ffffff;
 }
+.navMenu:first-child {
+  margin-left: 1rem;
+}
+.navMenu:last-child {
+  margin-right: 1rem;
+}
 .page-footer {
-  background: var(--purple);
+  /* background: url(./img/main_header.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed; */
+  background-color: var(--purple);
 }
 .aboutUs img {
   width: 100%;
@@ -65,8 +92,29 @@ main {
 .centr3 {
   margin: 20vh auto;
 }
-.mainSlider {
+.dokiBlock {
   padding: 2rem;
-  border: 2px solid var(--purple);
+  border-radius: 5px;
   margin: 2rem 0;
+  background: var(--purple);
+  color: #fff;
 }
+.textContent {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5rem;
+}
+.revision {
+  font-size: 2rem;
+  padding: 2rem;
+}
+.textContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.textContent img {
+  border-radius: 5px;
+}
+/* .mapouter {
+  border: 2px solid var(--purple);
+} */
